--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,11 +2,9 @@ name: Terraform CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
   workflow_dispatch:
 
 permissions:
@@ -14,7 +12,7 @@ permissions:
   contents: read
 
 jobs:
-  terraform-plan:
+  terraform-plan-dev:
     name: Terraform Plan (dev)
     runs-on: ubuntu-latest
 
@@ -35,7 +33,7 @@ jobs:
 
       - name: Terraform Init (dev)
         working-directory: environments/dev
-        run: terraform init
+        run: terraform init -input=false
 
       - name: Terraform Format Check (dev)
         working-directory: environments/dev
@@ -47,14 +45,15 @@ jobs:
 
       - name: Terraform Plan (dev)
         working-directory: environments/dev
-        run: terraform plan
+        run: terraform plan -input=false -no-color
 
-  terraform-apply:
+
+  terraform-apply-prod:
     name: Terraform Apply (prod)
     runs-on: ubuntu-latest
-    needs: terraform-plan
-    if: github.event_name == 'workflow_dispatch'
+    needs: terraform-plan-dev
     environment: prod
+    if: github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout repository
@@ -73,8 +72,8 @@ jobs:
 
       - name: Terraform Init (prod)
         working-directory: environments/prod
-        run: terraform init
+        run: terraform init -input=false
 
       - name: Terraform Apply (prod)
         working-directory: environments/prod
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -input=false
