--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 
 concurrency:
-  group: terraform-dev
+  group: terraform
   cancel-in-progress: true
 
 jobs:
@@ -35,25 +35,21 @@ jobs:
         with:
           terraform_version: 1.14.3
 
-      - name: Terraform Init
+      - name: Terraform Init (dev)
         working-directory: environments/dev
-        run: terraform init
+        run: terraform init -input=false
 
-      - name: Terraform Format Check
+      - name: Terraform Format Check (dev)
         working-directory: environments/dev
         run: terraform fmt -check
 
-      - name: Terraform Validate
+      - name: Terraform Validate (dev)
         working-directory: environments/dev
         run: terraform validate
 
       - name: Terraform Plan (dev)
         working-directory: environments/dev
-        run: |
-          terraform plan \
-            -input=false \
-            -var="aws_region=us-east-2" \
-            -var="environment=dev"
+        run: terraform plan -input=false
 
   terraform-apply-prod:
     name: Terraform Apply (prod)
@@ -77,14 +73,10 @@ jobs:
         with:
           terraform_version: 1.14.3
 
-      - name: Terraform Init
+      - name: Terraform Init (prod)
         working-directory: environments/prod
-        run: terraform init
+        run: terraform init -input=false
 
       - name: Terraform Apply (prod)
         working-directory: environments/prod
-        run: |
-          terraform apply \
-            -auto-approve \
-            -var="aws_region=us-east-2" \
-            -var="environment=prod"
+        run: terraform apply -auto-approve
