fix(ci): stabilize dev plan and gated prod apply

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 
 concurrency:
-  group: terraform
+  group: terraform-dev
   cancel-in-progress: true
 
 jobs:
@@ -37,7 +37,7 @@ jobs:
 
       - name: Terraform Init (dev)
         working-directory: environments/dev
-        run: terraform init -input=false
+        run: terraform init
 
       - name: Terraform Format Check (dev)
         working-directory: environments/dev
@@ -49,7 +49,11 @@ jobs:
 
       - name: Terraform Plan (dev)
         working-directory: environments/dev
-        run: terraform plan -input=false
+        run: |
+          terraform plan \
+            -input=false \
+            -var="aws_region=us-east-2" \
+            -var="environment=dev"
 
   terraform-apply-prod:
     name: Terraform Apply (prod)
@@ -75,8 +79,13 @@ jobs:
 
       - name: Terraform Init (prod)
         working-directory: environments/prod
-        run: terraform init -input=false
+        run: terraform init
 
       - name: Terraform Apply (prod)
         working-directory: environments/prod
-        run: terraform apply -auto-approve
+        run: |
+          terraform apply \
+            -auto-approve \
+            -input=false \
+            -var="aws_region=us-east-2" \
+            -var="environment=prod"
